<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meta</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Importacao">Fazer Importação</string>
    <string name="title_activity_cadastro_estado">CadastroEstadoActivity</string>
    <string name="Voltar">Voltar</string>
    <string name="Salvar">Salvar</string>
    <string name="Excluir">Excluir</string>
    <string name="Listar">Listar</string>
    <string name="Alterar">Alterar</string>
    <string name="Pessoa">Consultar Pessoa</string>
    <string name="Produto">Consultar Produto</string>
    <string name="Cidade">Consultar Cidade</string>
    <string name="Estado">Consultar Estado</string>
    <string name="Pedido">Consultar Pedido</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_pedido">Pedido</string>
    <string name="title_activity_produto">Produto</string>
    <string name="title_activity_cadastro_cidade">CadastroCidadeActivity</string>
    <string name="title_activity_cadastro_pessoa">CadastroPessoaActivity</string>
    <string name="title_activity_consulta_cliente">ConsultaClienteActivity</string>
    <string name="title_activity_consulta__cidade">Consulta_CidadeActivity</string>
    <string name="title_activity_telefone">TelefoneActivity</string>
    <string name="app_label">searchConsulta</string>
    <string name="search_hint">Consultar Cidade</string>
    <string name="search_hint_cliente">Consultar Cliente</string>
    <string name="search_hint_produto">Consultar Produto</string>
    <string name="search_hint_filial">Consultar Filial</string>
    <string name="search_hint_Tabelapreco">Consultar Tabela</string>
    <string name="search_hint_conPgto">Consultar Condição de Pgto </string>
    <string name="search_hint_pedido">Consultar Pedido </string>
    <string name="search_hint_Vendedor">Consultar Vendedor </string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="title_activity_PedidoTabs">PedidoTabs</string>
    <string name="title_activity_PessoaTabs">PessoaTabs</string>
    <string name="title_pessoa">Cliente</string>
    <string name="Adicionar_itens">Adicionar Produto</string>
    <string name="progress_bar">Fazendo a Importação</string>
    <string name="Aguarde">por favor, aguarde..</string>
    <string name="MensagemImportacao">Essa opção ira apagar todos os dados do aplicativo e fazer uma nova importação.</string>
    <string name="Meta">Meta Força de Venda</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_consulta__produto">Consulta_ProdutoActivity</string>
    <string name="title_activity_consulta_filial">ConsultaFilialActivity</string>
    <string name="title_activity_consulta__filial">Consulta_FilialActivity</string>
    <string name="title_activity_consulta__condica_pgto">Consulta_CondicaPGTOActivity</string>
    <string name="title_activity_consulta__vendedor">Consulta_VendedorActivity</string>

    //string de validacao
    <string name="Campo_vazio">Este campo não pode ser vazio </string>
    <string name="Min_Value_cpf">CPF ter no minimo 11 digito </string>
    <string name="Max_Value_cpf">CPF ter no maximo 11 digito </string>
    <string name="Min_Value_cnpj">CNPJ ter no minimo 14 digito </string>
    <string name="Max_Value_cnpj">CNPJ ter no maximo 14 digito </string>
    <string name="MinRG_Value">RG Inválido ter no minimo 9 digitos</string>
    <string name="MaxRG_Value">RG Inválido ter no maximo 10 digitos </string>
    <string name="MinIns_Value">Inscrição Estadual Inválida ter no minimo 10 digitos</string>
    <string name="MaxIns_Value">Inscrição Estadual Inválida ter no maximo 14 digitos </string>
    <string name="Max_numero">O numero ter no maximo 10 digito </string>
    <string name="email_validation">Email Inválido </string>
    <string name="cep_validation">CEP Inválido </string>
    <string name="Max_bairro">O bairro ter no maximo 50 caracteres </string>
    <string name="Max_endereco">O endereço ter no maximo 50 caracteres </string>
    <string name="Max_email">O email ter no maximo 50 caracteres</string>
    <string name="Max_comple">Ter no maximo 10 caracteres</string>
    <string name="Min_cep">Ter no mimino 10 digitos </string>
    <string name="Max_cep">Ter no maximo 10 digitos </string>
    <string name="validation_valid_email">Email Inválido </string>
    <string name="Min_ValueTelefone">Telefone inválido minimo 10</string>
    <string name="Max_ValueTelefone">Telefone inválido maximo 11</string>
    <string name="title_activity_itens_pedido">ItensPedidoActivity</string>
    <string name="max_cidade">O nome da cidade maximo 60 caracteres </string>
    <string name="max_cliente">O nome da cliente maximo de 60 caracteres </string>
    <string name="max_razaosocial">A Razão social maximo 60 caracteres </string>
    <string name="max_Apelido">O apelido maximo 60 caracteres </string>
    <string name="max_fantasia">O nome fantasia maximo 60 caracteres </string>
    <string name="min_ibge">O campo ibge ter no minimo 7 numeros </string>
    <string name="title_activity_consulta_pedido">ConsultaPedidoActivity</string>
    <string name="title_activity_consulta_importacao">ConsultaImportacaoActivity</string>
    <string name="title_activity_tela_importacao">TelaImportacao</string>
    <string name="title_activity_tela_esportacao">TelaEsportacao</string>
    <string name="title_activity_consulta_tabela_preco">ConsultaTabelaPrecoActivity</string>



</resources>
